# imjoy-potree-converter

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  test.py
PotreeConverter/: CMakeLists.txt  index.html  prepend.js
PotreeConverter/include/: PTXPointReader.h  PotreeWriter.h
PotreeConverter/resources/page_template/: viewer_template.html  viewer_template_flip.html
PotreeConverter/src/: PotreeConverter.cpp  PotreeWriter.cpp  main.cpp
docs/: PotreeConverter.js  PotreeConverter.wasm  index.html  potreeConverterWorker.js  site.css  terminal.js  viewer.html
docs/libs/potree/: potree.js
